--- a/python/4_Histogram_Generation.ipynb
+++ b/python/4_Histogram_Generation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Lê o arquivo CSV com o separador ';'\n",
-    "df = pd.read_csv('../data_files/dados_resumo_cotas.csv', sep=';')\n",
+    "df = pd.read_csv('../input_data/dados_resumo_cotas.csv', sep=';')\n",
     "\n",
     "# Converter a coluna 'data' para o tipo datetime\n",
     "df['data'] = pd.to_datetime(df['data'], format='%d/%m/%Y')\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,6 @@
    "source": [
     "# Criação do subplot para as cotas_cs e cotas_pf:\n",
     "fig, ax = plt.subplots(figsize=(7, 6)) # (Largura, Altura)\n",
-    "\n",
     "\n",
     "# Histograma para cotas_cs (verde)\n",
     "sns.histplot(df['cotas_cs'].dropna(), ax=ax, kde=True, color='green', label='Cotas CASAN')\n",
@@ -139,7 +138,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the plot with specified resolution and size\n",
-    "plt.savefig('grafico_histogramas_estacoes.png', dpi=900)\n",
+    "plt.savefig('../output_data/images/grafico_histogramas_estacoes.png', dpi=900)\n",
     "\n",
     "# Ajustes finais\n",
     "plt.tight_layout()\n",
